fix(auth): fix require context in some resources
