# docs/swagger.yaml
@@ -81,6 +81,15 @@ definitions:
       refresh_token:
         type: string
     type: object
+  dto.Logout:
+    properties:
+      refresh_token:
+        type: string
+      session_id:
+        type: string
+      user_id:
+        type: string
+    type: object
   dto.RefreshAccessToken:
     properties:
       refresh_token:
@@ -148,6 +157,28 @@ paths:
           schema:
             $ref: '#/definitions/common.BaseResponse-dto_LoginResponse'
       summary: Login
+      tags:
+      - auth
+  /auth/logout:
+    post:
+      consumes:
+      - application/json
+      description: Logout
+      parameters:
+      - description: request body for logout an user [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.Logout'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.BaseResponse-dto_UserDTO'
+      summary: Logout
       tags:
       - auth
   /auth/refresh_login:
